--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Dobos Stefan</a>.
+      Coded by <a href="https://github.com/stefandobos?tab=repositories">Dobos Stefan</a>.
     </div>
   <script src="script.js"></script>
 </body>
